--- a/onehundred/index.html
+++ b/onehundred/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Shawn Jackson">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>10×10</title>
+    <title>100</title>
     <script src="./js/projects.js"></script>
     <script src="./js/script.js"></script>
   </head>
