--- a/lab/moments/index.html
+++ b/lab/moments/index.html
@@ -5,7 +5,8 @@
         <title>test video: traffic at seoul city, south korea</title>
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <meta name="description" content="cool tetras bro.">
+        <meta name="description" content="cool seoul bro.">
+        <meta name="google-site-verification" content="BbfBPgq68egZKvPjZy01NaEfChJWRfGJ6TbaPibv0dc" />
         <style>
           main {
             width: 100%;
